--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,3 +59,17 @@
       @apply bg-background text-foreground;
     }
   }
+
+
+  .swiper-pagination-bullet{
+    width: 7px !important;
+    height: 7px !important;
+    background:rgba(255,255,255,0.2);
+    scale:0.9!important;
+  }
+
+  .swiper-pagination-bullet-active{
+    color:black;
+    background: black !important;
+    scale:1 !important
+  }
